<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:kes="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.crowdmobile.kes.MainActivity" >

    <item android:id="@+id/action_credit"
        android:enabled="false"
        android:title="0"
        android:orderInCategory="9" app:showAsAction="always" />
    <item android:id="@+id/action_crediticon"
        android:enabled="false"
        android:icon="@drawable/ic_navbar_credit_icon"
        android:orderInCategory="10" app:showAsAction="always|withText"
        android:title="" />
    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="100"
        kes:showAsAction="never"
        android:title="@string/action_privacy"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        kes:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_support"
        android:orderInCategory="103"
        kes:showAsAction="never"
        android:title="@string/action_support"/>
    <item
        android:id="@+id/action_terms"
        android:orderInCategory="103"
        kes:showAsAction="never"
        android:title="@string/action_terms"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="104"
        kes:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>
