<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/login_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
        <ImageView
            android:layout_centerInParent="true"
            android:src="@drawable/ic_access_bongo"
            android:scaleType="fitCenter"
            android:paddingLeft="@dimen/access_iconpaddingside"
            android:paddingRight="@dimen/access_iconpaddingside"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
     </RelativeLayout>
    <android.support.v7.widget.CardView
        android:gravity="center"
        android:layout_margin="@dimen/access_cardmargin"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
            <LinearLayout
                android:paddingLeft="@dimen/access_cardpadding"
                android:paddingRight="@dimen/access_cardpadding"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvAccessTitle"
                    android:gravity="center_horizontal"
                    android:text="@string/not_registered_title"
                    android:textSize="@dimen/access_titletext"
                    android:textColor="@color/access_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tvAccessMessage"
                    android:paddingTop="@dimen/access_titletext_padding"
                    android:paddingLeft="@dimen/access_cardpadding"
                    android:paddingRight="@dimen/access_cardpadding"
                    android:gravity="center_horizontal"
                    android:text="@string/not_registered_message"
                    android:textSize="@dimen/access_messagetext"
                    android:textColor="@color/access_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/btGetStarted"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/access_btn_margintop"
                    android:padding="@dimen/access_btn_padding"
                    android:background="@drawable/button_background"
                    android:textSize="@dimen/access_btn_start_font"
                    android:text="@string/not_registered_btstart"
                    android:textColor="@color/access_btstart_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
